# AIGameMall

./: .gitignore  AGENTS.md  README.md
apps/: README.md
configs/: README.md
data/: DataStructureDesign.md  README.md  skins.json
data/accounts/: accounts.json
data/tags/: accountHero.json  accountListing.json  accountMetrics.json  accountSkin.json  assets.json  games.json  heroMaster.json  ranks.json  skinMaster.json
docs/: PROGRESS.md  README.md  git-commit-convention.md
docs/agents/: 2026-07-07-agent-orchestrator-design.md
docs/api/: agent-module-integration.md  api-design.md  frontend-integration.md
docs/architecture/: json-data-schema.md  open-questions.md
docs/product/: mall-ai-guide.md
docs/superpowers/plans/: 2026-07-08-controlled-chat-intent.md
docs/superpowers/specs/: 2026-07-07-wzry-agent-skills-design.md
frontend/: index.html  stream-test.html
react/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml
react/src/: App.jsx  index.css
scripts/: README.md
services/: README.md
services/agent-orchestrator/: .env.example  README.md  requirements.txt  test_agent.py  test_sanitize.py
services/api/: README.md  pyproject.toml  requirements.txt
services/api/app/: __init__.py  main.py  server.py
services/api/app/data/: __init__.py  accounts.py
services/api/app/routers/: __init__.py  accounts.py  agent_results.py  chat.py
services/api/app/schemas/: __init__.py  accounts.py  agent_results.py  chat.py  responses.py
services/api/app/services/: agent_client.py
services/api/tests/: test_api.py
(+17 files in other folders)
