[project]
name = "aigamemall-api"
version = "0.1.0"
description = "Frontend API service for AIGameMall."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "openai>=1.58.0",
    "openai-agents>=0.0.7",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
